fixed steps and align left titles

--- a/static/style.css
+++ b/static/style.css
@@ -522,7 +522,6 @@ body.menu-open {
 .top-title,
 .toggle-container,
 .main-content,
- 
 .contact-container,
 .servizi-title {
     /* Box Model e Layout */
@@ -604,7 +603,14 @@ body.menu-open {
 
 
 
-
+.sub-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    width: 100%;
+    height: 100%;
+    gap: 1em;
+    margin: 0 auto;
+}
 
 
 .column-flex {
@@ -1503,6 +1509,10 @@ h4, h5, h6 {
     }
 
     #ambiente h2, #team h2 {
+        text-align: left;
+    }
+
+    #contatti h2, #contatti p {
         text-align: left;
     }
     
